--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Cinzel:wght@400&display=swap');
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -15,7 +15,7 @@ body {
 }
 
 h1 {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Cinzel', serif;
     font-size: 48px;
     margin-bottom: 20px;
 }
@@ -23,6 +23,7 @@ h1 {
 p {
     font-size: 18px;
     margin-bottom: 20px;
+    line-height: 1.5;
 }
 
 button {
@@ -45,7 +46,7 @@ button:hover {
 }
 
 #emojis {
-    font-size: 24px;
+    font-size: 50px;
     margin-bottom: 20px;
 }
 
@@ -55,9 +56,58 @@ input {
     border: none;
     border-radius: 5px;
     margin-bottom: 20px;
+    margin-right: 10px;
 }
+
 
 #response {
     font-size: 18px;
     margin-top: 20px;
+}
+
+@media (max-width: 767px) {
+    h1 {
+        font-size: 36px;
+        margin-bottom: 15px;
+    }
+
+    p {
+        font-size: 16px;
+        margin-bottom: 15px;
+    }
+
+    #emojis {
+        font-size: 20px;
+        margin-bottom: 15px;
+    }
+
+    input {
+        font-size: 14px;
+        padding: 5px;
+        margin-bottom: 15px;
+    }
+
+    button {
+        font-size: 14px;
+        padding: 5px 10px;
+        margin-bottom: 15px;
+    }
+
+    #response {
+        font-size: 16px;
+        margin-top: 15px;
+    }
+}
+
+#scoreSliderContainer {
+    margin: 20px 0;
+}
+
+#scoreSlider {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+#sliderLabel {
+    font-size: 16px;
 }
